--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </div>
     
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
