--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet'>
+    <script type="text/javascript" src="app.js"></script>
 
   </head>
   <body>
