--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet'>
-    <script type="text/javascript" src="app.js"></script>
 
   </head>
   <body>
@@ -33,6 +32,6 @@
       </div>
     
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="text/app.js" type="text/javascript"></script>
   </body>
 </html>
