--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
+      <div class="container">
+        
+      </div>
     
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script> -->
