--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         Menu
       </div>
       <div class="container">
-        
+        <p>DJ Trek, 2 years old, black mexican, crybaby, husband.</p>
       </div>
     
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
