--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-    
+    <div id="container">
+      <ul>
+        <li><a href="about.html">About/Bio</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
+        <li><a href="#">Music Sample</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script> -->
   </body>
