--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet'>
-
+    <link href='navbar.css' rel='stylesheet'>
   </head>
   <body>
 
@@ -30,8 +30,13 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-      <div class="container">
-        <p>DJ Trek, 2 years old, black mexican, crybaby, husband.</p>
+      <div id="container">
+        <ul>
+          <li><a href="about.html">About/Bio</a></li>
+          <li><a href="reviews.html">Reviews</a></li>
+          <li><a href="#">Music Sample</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
     
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
