--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
       <!-- Menu -->
       <ul>
-        <li><a href="#">About/Bio</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About/Bio</a></li>
+        <li><a href="reviews">Reviews</a></li>
         <li><a href="#">Music Sample</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
