--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet'>
     <link href='navbar.css' rel='stylesheet'>
+    <title>DJTrek</title>
   </head>
   <body>
 
