--- a/reviews.html
+++ b/reviews.html
@@ -16,8 +16,8 @@
 
       <!-- Menu -->
       <ul>
-        <li><a href="#">About/Bio</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="about.html">About/Bio</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
         <li><a href="#">Music Sample</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -30,16 +30,46 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-      <div id="container">
-        <ul>
-          <li><a href="about.html">About/Bio</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="#">Music Sample</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
+      <div class="gallery">
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/fullsizerender.jpg">
+      </figure>
+      <figure class="gallery-item">
+            <img class="thumbnail" src="/img/fullsizerender1.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/fullsizerender2.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/fullsizerender3.png">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_0364.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_0994.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_1146.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_1601.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_1819.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_1879.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_3331.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="/img/img_3896.jpg">
+      </figure>
+    </div>
     
-    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/app.js" type="text/javascript"></script> -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
