--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 
       <!-- Menu -->
       <ul>
-        <li><a href="#">About/Bio</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="about.html">About/Bio</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
         <li><a href="#">Music Sample</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -39,7 +39,7 @@
         </ul>
       </div>
     
-    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/app.js" type="text/javascript"></script> -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
