--- a/reviews.html
+++ b/reviews.html
@@ -33,40 +33,40 @@
       </div>
       <div class="gallery">
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/fullsizerender.jpg">
+        <img class="thumbnail" src="/img/FullSizeRender.jpg">
       </figure>
       <figure class="gallery-item">
-            <img class="thumbnail" src="/img/fullsizerender1.jpg">
+            <img class="thumbnail" src="/img/FullSizeRender1.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/fullsizerender2.jpg">
+        <img class="thumbnail" src="/img/FullSizeRender2.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/fullsizerender3.png">
+        <img class="thumbnail" src="/img/FullSizeRender3.png">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_0364.jpg">
+        <img class="thumbnail" src="/img/IMG_0364.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_0994.jpg">
+        <img class="thumbnail" src="/img/IMG_0994.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_1146.jpg">
+        <img class="thumbnail" src="/img/IMG_1146.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_1601.jpg">
+        <img class="thumbnail" src="/img/IMG_1601.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_1819.jpg">
+        <img class="thumbnail" src="/img/IMG_1819.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_1879.jpg">
+        <img class="thumbnail" src="/img/IMG_1879.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_3331.jpg">
+        <img class="thumbnail" src="/img/IMG_3331.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/img_3896.jpg">
+        <img class="thumbnail" src="/img/IMG_3896.jpg">
       </figure>
     </div>
     
