--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
       
       <!-- Menu icon -->
       <div class="icon-close">
-        <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+        <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/imgs/uber/close.png">
       </div>
 
       <!-- Menu -->
@@ -33,40 +33,40 @@
       </div>
       <div class="gallery">
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/FullSizeRender.jpg">
+        <img class="thumbnail" src="/imgs/FullSizeRender.jpg">
       </figure>
       <figure class="gallery-item">
-            <img class="thumbnail" src="/img/FullSizeRender1.jpg">
+            <img class="thumbnail" src="/imgs/FullSizeRender1.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/FullSizeRender2.jpg">
+        <img class="thumbnail" src="/imgs/FullSizeRender2.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/FullSizeRender3.png">
+        <img class="thumbnail" src="/imgs/FullSizeRender3.png">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_0364.jpg">
+        <img class="thumbnail" src="/imgs/IMG_0364.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_0994.jpg">
+        <img class="thumbnail" src="/imgs/IMG_0994.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_1146.jpg">
+        <img class="thumbnail" src="/imgs/IMG_1146.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_1601.jpg">
+        <img class="thumbnail" src="/imgs/IMG_1601.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_1819.jpg">
+        <img class="thumbnail" src="/imgs/IMG_1819.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_1879.jpg">
+        <img class="thumbnail" src="/imgs/IMG_1879.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_3331.jpg">
+        <img class="thumbnail" src="/imgs/IMG_3331.jpg">
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="/img/IMG_3896.jpg">
+        <img class="thumbnail" src="/imgs/IMG_3896.jpg">
       </figure>
     </div>
     
