--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       
       <!-- Menu icon -->
       <div class="icon-close">
-        <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+        <img src="//s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
       </div>
 
       <!-- Menu -->
