--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet'>
     <link href='navbar.css' rel='stylesheet'>
     <title>DJTrek</title>
@@ -12,7 +12,7 @@
       
       <!-- Menu icon -->
       <div class="icon-close">
-        <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+        <img src="//s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
       </div>
 
       <!-- Menu -->
