--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
       
       <!-- Menu icon -->
       <div class="icon-close">
-        <img src="//s3.amazonaws.com/codecademy-content/courses/ltp2/imgs/uber/close.png">
+        <img src="/imgs/close.png">
       </div>
 
       <!-- Menu -->
