Trying out a new way to do a gallery
Gallery update + scroll bar since I forgot it

--- a/reviews.html
+++ b/reviews.html
@@ -31,11 +31,13 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-      <div class="gallery">
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/FullSizeRender.jpg">
-      </figure>
-      <figure class="gallery-item">
+      <div class="img">
+          <a target="_blank" href="img_fjords.jpg">
+              <img src="/imgs/FullSizeRender.jpg" alt="Trolltunga Norway" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <!--<figure class="gallery-item">
             <img class="thumbnail" src="/imgs/FullSizeRender1.jpg">
       </figure>
       <figure class="gallery-item">
@@ -68,7 +70,7 @@
       <figure class="gallery-item">
         <img class="thumbnail" src="/imgs/IMG_3896.jpg">
       </figure>
-    </div>
+    </div>-->
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
