--- a/reviews.html
+++ b/reviews.html
@@ -55,6 +55,42 @@
           </a>
       <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
       </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/FullSizeRender3.jpg">
+              <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
+          </a>
+      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      </div>
       <!--<figure class="gallery-item">
             <img class="thumbnail" src="/imgs/FullSizeRender1.jpg">
       </figure>
