--- a/reviews.html
+++ b/reviews.html
@@ -40,59 +40,74 @@
           <a target="_blank" href="/imgs/FullSizeRender.jpg">
               <img src="/imgs/FullSizeRender.jpg" width="300" height="200">
           </a>
-      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender1.jpg">
               <img src="/imgs/FullSizeRender1.jpg" width="300" height="200">
           </a>
-      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender2.jpg">
               <img src="/imgs/FullSizeRender2.jpg" width="300" height="200">
           </a>
-      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender3.jpg">
               <img src="/imgs/FullSizeRender3.jpg" width="300" height="200">
           </a>
-      <div class="desc">10/10 Work, my sister loved her DJ on her special wedding day!</div>
+      <div class="desc">Insert Review Here!</div>
       </div>
-      <!--<figure class="gallery-item">
-            <img class="thumbnail" src="/imgs/FullSizeRender1.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/FullSizeRender2.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/FullSizeRender3.png">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_0364.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_0994.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_1146.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_1601.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_1819.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_1879.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_3331.jpg">
-      </figure>
-      <figure class="gallery-item">
-        <img class="thumbnail" src="/imgs/IMG_3896.jpg">
-      </figure>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_0364.jpg">
+              <img src="/imgs/IMG_0364.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_0994.jpg">
+              <img src="/imgs/IMG_0994.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_1146.jpg">
+              <img src="/imgs/IMG_1146.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_1601.jpg">
+              <img src="/imgs/IMG_1601.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_1879.jpg">
+              <img src="/imgs/IMG_1879.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_1819.jpg">
+              <img src="/imgs/IMG_1819.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_3331.jpg">
+              <img src="/imgs/IMG_3331.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
+      <div class="img">
+          <a target="_blank" href="/imgs/IMG_3896.jpg">
+              <img src="/imgs/IMG_3896.jpg" width="300" height="200">
+          </a>
+      <div class="desc">Insert Review Here!</div>
+      </div>
     </div>-->
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
