--- a/reviews.html
+++ b/reviews.html
@@ -61,7 +61,7 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_0364.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender4.jpg">
               <img src="/imgs/IMG_0364.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
