--- a/reviews.html
+++ b/reviews.html
@@ -62,7 +62,7 @@
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender4.jpg">
-              <img src="/imgs/IMG_0364.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender4.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
