--- a/reviews.html
+++ b/reviews.html
@@ -108,7 +108,7 @@
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
-    </div>-->
+    </div>
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
