--- a/reviews.html
+++ b/reviews.html
@@ -67,14 +67,14 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_0994.jpg">
-              <img src="/imgs/IMG_0994.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender5.jpg">
+              <img src="/imgs/FullSizeRender5.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_1146.jpg">
-              <img src="/imgs/IMG_1146.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender6.jpg">
+              <img src="/imgs/FullSizeRender6.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
