--- a/reviews.html
+++ b/reviews.html
@@ -79,32 +79,32 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_1601.jpg">
-              <img src="/imgs/IMG_1601.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender7.jpg">
+              <img src="/imgs/FullSizeRender7.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_1879.jpg">
-              <img src="/imgs/IMG_1879.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender8.jpg">
+              <img src="/imgs/FullSizeRender8.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_1819.jpg">
-              <img src="/imgs/IMG_1819.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender9.jpg">
+              <img src="/imgs/FullSizeRender9.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_3331.jpg">
-              <img src="/imgs/IMG_3331.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender10.jpg">
+              <img src="/imgs/FullSizeRender10.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/IMG_3896.jpg">
-              <img src="/imgs/IMG_3896.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender11.jpg">
+              <img src="/imgs/FullSizeRender11.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
