--- a/reviews.html
+++ b/reviews.html
@@ -73,8 +73,8 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender6.jpg">
-              <img src="/imgs/FullSizeRender6.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender6.png">
+              <img src="/imgs/FullSizeRender6.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
