This better work
asdfsadf

--- a/reviews.html
+++ b/reviews.html
@@ -79,31 +79,31 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender7.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender7.png">
               <img src="/imgs/FullSizeRender7.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender8.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender8.png">
               <img src="/imgs/FullSizeRender8.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender9.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender9.png">
               <img src="/imgs/FullSizeRender9.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender10.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender10.png">
               <img src="/imgs/FullSizeRender10.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender11.jpg">
+          <a target="_blank" href="/imgs/FullSizeRender11.png">
               <img src="/imgs/FullSizeRender11.jpg" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
