--- a/reviews.html
+++ b/reviews.html
@@ -80,31 +80,31 @@
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender7.png">
-              <img src="/imgs/FullSizeRender7.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender7.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender8.png">
-              <img src="/imgs/FullSizeRender8.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender8.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender9.png">
-              <img src="/imgs/FullSizeRender9.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender9.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender10.png">
-              <img src="/imgs/FullSizeRender10.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender10.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender11.png">
-              <img src="/imgs/FullSizeRender11.jpg" width="300" height="200">
+              <img src="/imgs/FullSizeRender11.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
