Should fix everything
Please

--- a/reviews.html
+++ b/reviews.html
@@ -67,8 +67,8 @@
       <div class="desc">Insert Review Here!</div>
       </div>
       <div class="img">
-          <a target="_blank" href="/imgs/FullSizeRender5.jpg">
-              <img src="/imgs/FullSizeRender5.jpg" width="300" height="200">
+          <a target="_blank" href="/imgs/FullSizeRender5.png">
+              <img src="/imgs/FullSizeRender5.png" width="300" height="200">
           </a>
       <div class="desc">Insert Review Here!</div>
       </div>
