--- a/reviews.html
+++ b/reviews.html
@@ -31,7 +31,8 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-      <!--<div class="gallery">
+      <h1 class="title">Social Networks</h1>
+      <div class="gallery">
       <figure class="gallery-item">
         <img class="thumbnail" src="/imgs/FullSizeRender.jpg">
       </figure>
