--- a/reviews.html
+++ b/reviews.html
@@ -31,12 +31,12 @@
         <i class="fa fa-bars"></i>
         Menu
       </div>
-      <h1 class="title">Social Networks</h1>
+      <h1 class="titlename">Social Networks</h1>
       <div class="gallery">
       <figure class="gallery-item">
         <img class="thumbnail" src="/imgs/FullSizeRender.jpg">
       </figure>
-      <figure class="gallery-item">-->
+      <figure class="gallery-item">
       <div class="img">
           <a target="_blank" href="/imgs/FullSizeRender.jpg">
               <img src="/imgs/FullSizeRender.jpg" width="300" height="200">
